# xorg-launch-helper

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  user-session.service.in  xorg.service.in  xorg.target.in  xorg@.service.in
src/: Makefile.am  lib.c  main.c  user-session.h  user.c  xserver.c
